--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "gulp-typescript": "^5.0.1",
     "run-sequence": "^2.2.1",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.7.0-beta"
   }
 }
