--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,13 @@
 	"type": "shell",
 	"tasks": [
 		{
+			"label": "build:vscode",
+			"args": ["build:vscode"],
+			"group": "build",
+			"isBackground": false,
+			"problemMatcher": ["$tsc"]
+		},
+		{
 			"label": "build",
 			"args": [],
 			"group": "build",
