--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/discord-sambo/localization#readme",
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/node": "^12.7.8",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
@@ -26,5 +27,8 @@
     "run-sequence": "^2.2.1",
     "tslint": "^5.20.0",
     "typescript": "^3.7.0-beta"
+  },
+  "dependencies": {
+    "glob": "^7.1.4"
   }
 }
