--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
     "del": "^5.1.0",
     "eslint": "^6.5.1",
     "gulp": "^4.0.2",
+    "gulp-eslint": "^6.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-tslint": "^8.1.4",
     "gulp-typescript": "^5.0.1",
     "run-sequence": "^2.2.1",
-    "tslint": "^5.20.0",
     "typedoc": "^0.15.0",
     "typescript": "^3.7.0-beta"
   },
