--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Localization module for Discord-Sambo",
   "main": "bin/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/discord-sambo/localization#readme",
   "devDependencies": {
     "@types/glob": "^7.1.1",
+    "@types/jest": "^24.0.18",
     "@types/node": "^12.7.8",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
@@ -27,11 +28,23 @@
     "gulp-eslint": "^6.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
+    "jest": "^24.9.0",
     "run-sequence": "^2.2.1",
+    "ts-jest": "^24.1.0",
     "typedoc": "^0.15.0",
     "typescript": "^3.7.0-beta"
   },
   "dependencies": {
     "glob": "^7.1.4"
+  },
+  "jest": {
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testRegex": "/test/.+\\.test\\.ts$",
+    "verbose": true
   }
 }
