--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "transform": {
       "^.+\\.ts$": "ts-jest"
     },
-    "testRegex": "/test/.+\\.test\\.ts$",
+    "testRegex": "/__test__/.+\\.test\\.ts$",
     "verbose": true
   }
 }
