--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"type": "node",
 			"request": "launch",
 			"name": "Launch Program",
-			"program": "${workspaceRoot}/bin/test/test.js",
+			"program": "${workspaceRoot}/bin/__test__/manual_test.js",
 			"cwd": "${workspaceRoot}/bin",
 			"preLaunchTask": "build:nolint",
 			"console": "integratedTerminal"
