--- a/package.json
+++ b/package.json
@@ -40,15 +40,7 @@
     "glob": "^7.1.4"
   },
   "eslintConfig": {
-    "extends": "@discord-sambo",
-    "parserOptions": {
-      "project": "tsconfig.json",
-      "ecmaVersion": 11,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "modules": true
-      }
-    }
+    "extends": "@discord-sambo"
   },
   "jest": {
     "roots": [
