Update test script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Localization module for Discord-Sambo",
   "main": "bin/index.js",
   "scripts": {
-    "test": "gulp && jest",
+    "test": "jest",
     "docs": "typedoc --mode file --module commonjs --theme minimal --exclude \"./**/+(node_modules|__test__|)/**/*.ts\" --out docs/ src"
   },
   "repository": {
