--- a/.github/workflows/build_indev.yml
+++ b/.github/workflows/build_indev.yml
@@ -25,22 +25,23 @@ jobs:
         run: npx gulp build
       
       - name: Clone indev
-        run: git clone https://github.com/discord-sambo/localization.git -b indev ../localization-indev
+        run: git clone https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git -b indev ../indev-build
       
       - name: Prepare indev build
         run: npx gulp gh-prebuild-prepare
 
-      - name: Make commit
+      - name: Make commit and push
         run: |
-          cd ../localization-indev
-          git config --global user.email "action@github.com"
-          git config --global user.name "Github Action"
+          cd ../indev-build
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ github.actor}}@users.noreply.github.com"
           git add --all
           git commit -m "Build indev: ${{ github.sha }}"
+          git push origin indev
 
-      - name: Push indev build
-        uses: ad-m/github-push-action@v0.5.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          directory: ../localization-indev
-          branch: indev
+      # - name: Push indev build
+      #   uses: ad-m/github-push-action@v0.5.0
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     directory: ../localization-indev
+      #     branch: indev
