--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -47,4 +47,4 @@ jobs:
           git config --global user.email "${{ github.actor}}@users.noreply.github.com"
           git add --all
           git commit -m "Build docs from master: ${{ github.sha }}"
-          git push origin indev
+          git push origin gh-pages
