tooling(docs): add new typedoc script
* update docs build workflow

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -23,6 +23,8 @@ jobs:
           npm install
           rm -rf ./node_modules/typedoc/node_modules/typescript
           cp -r ./node_modules/typescript ./node_modules/typedoc/node_modules/typescript
+          cd ./node_modules/@discord-sambo/typedoc-default-themes
+          npm run build
 
       - name: Build docs
         run: npm run docs
