--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,21 +15,11 @@
     "include": [
 		"src/**/*.ts",
 		"src/**/*.test.ts",
-		"./gulpfile.js"
+		"./gulpfile.js",
+		"scripts/**/*"
 	],
     "exclude": [
         "**/node_modules",
         "**/bin"
-	],
-	"typedocOptions": {
-		"mode": "file",
-		"module": "commonjs",
-		"theme": "@discord-sambo/typedoc-default-theme/src/minimal",
-		"exclude": "./**/+(node_modules|__test__|)/**/*.ts",
-		"out": "../docs",
-		"links": [{
-			"label": "Logger",
-			"url": "https://discord-sambo.github.io/logger"
-		}]
-	}
+	]
 }
