tooling(workflows): update docs build workflow

--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -24,6 +24,7 @@ jobs:
           rm -rf ./node_modules/typedoc/node_modules/typescript
           cp -r ./node_modules/typescript ./node_modules/typedoc/node_modules/typescript
           cd ./node_modules/@discord-sambo/typedoc-themes
+          npm install
           npm run build
 
       - name: Build docs
