--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -12,21 +12,21 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v1
-      
+
       - name: Install Node v12
         uses: actions/setup-node@v1
         with:
           node-version: 12
-      
+
       - name: Install dependencies
         run: |
           npm install
-          
+
           # Replace typedoc's typescript dep with currently installed
           # because it comes with an incompatible version
           rm -rf ./node_modules/typedoc/node_modules/typescript
           cp -r ./node_modules/typescript ./node_modules/typedoc/node_modules/typescript
-          
+
           # Clone typedoc theme, build, and link because for whatever reason
           # installing the deps and building in node_modules fails
           cd ../
@@ -35,15 +35,15 @@ jobs:
           npm install
           npm run build
           npm link
-          cd ../localization
+          cd ../$(echo '${{ github.repository }}' | grep -oP '/\K.+')
           npm link @discord-sambo/typedoc-themes
 
       - name: Build docs
         run: npm run docs
-      
+
       - name: Clone gh-pages branch
         run: git clone https://${{ github.actor }}:${{ secrets.DOCS_TOKEN }}@github.com/${{ github.repository }}.git -b gh-pages ../gh-pages
-      
+
       - name: Prepare docs build
         run: npx gulp gh-docs-prepare
 
