--- a/.github/workflows/publish_indev.yml
+++ b/.github/workflows/publish_indev.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           registry-url: https://npm.pkg.github.com/
-          scope: @discord-sambo
+          scope: '@discord-sambo'
       
       - name: Publish to GPR
         run: npm publish --tag dev --access public
