--- a/.github/workflows/publish_indev.yml
+++ b/.github/workflows/publish_indev.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor}}@users.noreply.github.com"
-          npm version 0.1.0-dev.$(git rev-parse --verify HEAD)
+          npm version $(cat package.json | grep -oP '"version": "\K[^"]+(?=")')-dev.$(git rev-parse --verify HEAD)
 
       - name: Publish to NPM
         run: npm publish --tag dev --access public
@@ -40,7 +40,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           registry-url: https://npm.pkg.github.com/
-          scope: '@discord-sambo'
       
       - name: Publish to GPR
         run: npm publish --tag dev --access public
