--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 	"homepage": "https://github.com/discord-sambo/localization#readme",
 	"devDependencies": {
 		"@discord-sambo/eslint-config": "discord-sambo/eslint-config",
-		"@discord-sambo/typedoc-themes": "discord-sambo/typedoc-themes",
 		"@types/glob": "^7.1.1",
 		"@types/jest": "^24.0.18",
 		"@types/node": "^12.7.8",
@@ -33,8 +32,8 @@
 		"jest": "^24.9.0",
 		"run-sequence": "^2.2.1",
 		"ts-jest": "^24.1.0",
-		"typedoc": "^0.15.0",
-		"typescript": "^3.7.1-rc"
+		"typedoc": "^0.15.1",
+		"typescript": "^3.7.2"
 	},
 	"dependencies": {
 		"glob": "^7.1.4"
