--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -42,7 +42,9 @@ jobs:
         run: git clone https://${{ github.actor }}:${{ secrets.DOCS_TOKEN }}@github.com/${{ github.repository }}.git -b gh-pages ../gh-pages
 
       - name: Prepare docs build
-        run: npx gulp gh-docs-prepare
+        run: |
+          npx gulp gh-docs-prepare
+          cp README.md ../gh-pages/_includes/README.md
 
       - name: Check if commit is needed
         id: git_status
