--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: sambo-site
 description: >
   A Discord.js-powered Discord client framework
 baseurl: "/localization"
-url: "https://discord-sambo.github.io/localization/"
+url: "https://discord-sambo.github.io"
 
 collections:
   guides:
