tooling(workflows): update dev build publish workflow
Hoping this fixes the sudden GPR publish issues

--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -40,6 +40,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           registry-url: https://npm.pkg.github.com/
+          scope: "@discord-samba"
       
       - name: Publish to GPR
         run: npm publish --tag dev --access public
