--- a/package.json
+++ b/package.json
@@ -76,7 +76,11 @@
 			"scope-case": [
 				2,
 				"always",
-				"pascal-case"
+				[
+					"pascal-case",
+					"lower-case",
+					"kebab-case"
+				]
 			],
 			"type-enum": [
 				2,
