tooling: add path mapping to get rid of relative import paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,18 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
 		"skipLibCheck": true,
-		"stripInternal": true
-    },
+		"stripInternal": true,
+		"rootDir": "./src",
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["src/*"],
+		}
+	},
     "include": [
 		"src/**/*.ts",
 		"src/**/*.test.ts",
-		"./gulpfile.js",
-		"scripts/**/*"
+		"scripts/**/*",
+		"gulpfile.js",
 	],
     "exclude": [
         "**/node_modules",
