--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"gulp": "^4.0.2",
 		"gulp-eslint": "^6.0.0",
 		"gulp-sourcemaps": "^2.6.5",
+		"gulp-ts-alias": "^1.1.0",
 		"gulp-typescript": "^5.0.1",
 		"husky": "^4.2.3",
 		"jest": "^25.1.0",
@@ -53,6 +54,9 @@
 			"^.+\\.ts$": "ts-jest"
 		},
 		"testRegex": "/__test__/.+\\.test\\.ts$",
+		"moduleNameMapper": {
+			"^@/(.*)$": "<rootDir>/src/$1"
+		},
 		"verbose": true
 	},
 	"husky": {
