--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -1,4 +1,4 @@
-name: Build Docs
+name: Publish Docs
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Build docs
+    name: Publish docs
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
