tooling(docs): fix docs publish workflow

--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           rm -rf ../gh-pages/docs
           rm -rf ../gh-pages/_guides
-          cp -r docs ../gh-pages/docs
+          cp -r ../docs ../gh-pages/docs
           cp -r guides ../gh-pages/_guides
           cp README.md ../gh-pages/_includes/README.md
 
