--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm install
 
       - name: Build package
-        run: npx gulp build
+        run: npm run build
 
       - name: Generate dev version
         run: |
