--- a/.github/workflows/publish_stable.yml
+++ b/.github/workflows/publish_stable.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm install
 
       - name: Build package
-        run: npx gulp build
+        run: npm run build
 
       - name: Publish to NPM
         run: npm publish --access public
