--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm install
 
       - name: Run ESLint
-        run: npx gulp lint
+        run: npm run lint
 
   build:
     name: Build
@@ -42,10 +42,10 @@ jobs:
         run: npm install
       
       - name: Build package
-        run: npx gulp build
+        run: npm run build
 
   test:
-    name: Jest
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
